Fixing z-index issues

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -294,7 +294,7 @@ form input, textarea {
     color: white;
     font-weight: bold;
     cursor: pointer;
-    z-index: 5;
+    z-index: 2;
 }
 
 .custom-select.opened {
